# tandem

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_WIKI.md  CONTRIBUTING.md  Cargo.toml  IMAGE_GUIDELINES.md  LICENSE  PRINCIPLES.md  PRODUCT.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TESTING_UPDATES.md  TRADEMARKS.md  VISION.md  package-lock.json  package.json  pnpm-lock.yaml  test_opencode_zen_api.js  test_opencode_zen_fetch.js
crates/tandem-automation/: Cargo.toml
crates/tandem-automation/src/: enterprise_scope.rs  lib.rs  types.rs  webhooks.rs
crates/tandem-bug-monitor/: Cargo.toml
crates/tandem-bug-monitor/src/: comment_summary.rs  error_provenance.rs  github.rs  lib.rs  log_artifacts.rs  log_parser.rs  types.rs
crates/tandem-bug-monitor/src/github/: tests.rs
crates/tandem-core/: Cargo.toml
crates/tandem-core/src/: agents.rs  cancellation.rs  config.rs  engine_api_token.rs  engine_loop.rs  event_bus.rs  fintech.rs  hooks.rs  lib.rs  message_part_reducer.rs  mutation_checkpoints.rs  permission_defaults.rs  permissions.rs  plugins.rs  provider_auth_store.rs  storage.rs  storage_paths.rs  tool_capabilities.rs  tool_effect_ledger.rs  tool_router.rs
crates/tandem-core/src/engine_loop/: data_boundary_gate.rs  loop_guards.rs  loop_tuning.rs  prewrite_gate.rs  prewrite_mode.rs  prompt_execution.rs  prompt_helpers.rs  prompt_runtime.rs  tests.rs  tool_execution.rs  tool_output.rs  types.rs
crates/tandem-core/src/storage_parts/: part01.rs  part02.rs
crates/tandem-data-boundary/: Cargo.toml
crates/tandem-data-boundary/src/: evaluate.rs  lib.rs  provider_egress.rs
crates/tandem-document/: Cargo.toml
crates/tandem-enterprise-contract/: Cargo.toml
crates/tandem-enterprise-contract/src/: approval_receipt.rs  cross_tenant.rs  governance.rs  lib.rs  lib_tests.rs  policy_inheritance.rs  policy_predicates.rs  policy_templates.rs
crates/tandem-enterprise-server/: Cargo.toml  LICENSE
crates/tandem-enterprise-server/src/: lib.rs
crates/tandem-enterprise-server/src/enterprise_connectors/: google_drive_ingestion.rs  mod.rs  secrets.rs
crates/tandem-enterprise-server/src/http/: mod.rs  routes_enterprise.rs  (+6 more)
crates/tandem-enterprise-server/tests/: enterprise_http.rs  enterprise_http_google_drive.rs  enterprise_ingestion_lifecycle.rs  enterprise_policy_http.rs
crates/tandem-eval/: Cargo.toml
crates/tandem-eval/src/: bootstrap.rs  bug_monitor_regression_fixture.rs  engine_executor.rs  incident_monitor_regression_fixture.rs  lib.rs
crates/tandem-graph-core/: Cargo.toml
crates/tandem-graph-core/src/: audit.rs  context_payloads.rs  graph_build.rs  lib.rs  query_envelope.rs  run_failure.rs  run_failure_tests.rs  run_failure_types.rs  run_trace.rs  storage.rs  tests.rs  trust.rs  workflow_graph.rs  workflow_impact.rs  workflow_impact_tests.rs  workflow_impact_types.rs  workflow_memory.rs  workflow_memory_rerun_tests.rs  workflow_run_tests.rs  workflow_runtime.rs  workflow_runtime_topology.rs
crates/tandem-incident-monitor/: Cargo.toml  LICENSE
crates/tandem-incident-monitor/src/: comment_summary.rs  error_provenance.rs  github.rs  governance_metrics.rs  lib.rs  log_artifacts.rs  log_parser.rs  reassessment.rs  scenarios.rs  types.rs
crates/tandem-memory/: Cargo.toml
crates/tandem-memory/src/: chunking.rs  context_layers.rs  context_uri.rs  crypto.rs  db.rs  decrypt_broker.rs  dek_cache.rs  distillation.rs  embeddings.rs  envelope.rs  envelope_crypto.rs  governance.rs  governed_read_tests.rs  importer.rs  key_lifecycle.rs  kms_providers.rs  knowledge_scope.rs  lib.rs  manager.rs  provider_egress.rs  recursive_retrieval.rs  response_cache.rs  store.rs  store_contract.rs  types.rs
crates/tandem-meta-harness-eval/: Cargo.toml
crates/tandem-observability/: Cargo.toml
crates/tandem-observability/src/: lib.rs  metrics.rs
crates/tandem-providers/: Cargo.toml
crates/tandem-providers/src/: guarded_dispatch.rs  lib.rs  provider_auth_store.rs  provider_auth_store_tests.rs
crates/tandem-repo-intelligence/: Cargo.toml
crates/tandem-repo-intelligence/src/: chunks.rs  debug.rs  error.rs  governed.rs  hybrid.rs  lib.rs  manifest.rs  model.rs  query.rs  query_text.rs  scanner.rs  store.rs  tests.rs
crates/tandem-server/: Cargo.toml  LICENSE
crates/tandem-server/examples/: github_project_item_cluster_to_grouped_mission_slice_client.rs  github_project_item_to_task_intake_preview_client.rs  github_project_items_to_grouped_mission_slice_client.rs  github_project_items_to_mission_workstreams_client.rs  task_intake_preview_client.rs  task_intake_to_coder_handoff_client.rs  task_intake_to_mission_preview_client.rs
crates/tandem-server/src/: agent_teams.rs  audit.rs  browser.rs  bug_monitor_github.rs  bug_monitor_linear.rs  bug_monitor_local.rs  capability_resolver.rs  data_boundary_bridge.rs  encrypted_file_store.rs  eval_support.rs  failure_reporter_github.rs  goal_capability_learning.rs  governance_store.rs  http.rs  incident_monitor_github.rs  incident_monitor_governance_metrics.rs  incident_monitor_linear.rs  incident_monitor_local.rs  incident_monitor_mcp.rs  incident_monitor_reassessment.rs  incident_monitor_scenarios.rs  incident_monitor_webhook.rs  lib.rs  mcp_catalog.rs  mcp_catalog_generated.rs  optimization.rs  pack_builder.rs  pack_manager.rs  preset_composer.rs  preset_registry.rs  preset_summary.rs  provider_egress.rs  runtime_event_log.rs  runtime_event_store.rs  signal_triage.rs  test_support.rs  workflow_learning_policy.rs  workflows.rs
crates/tandem-server/tests/: quarantine_policy.rs
crates/tandem-tools/: Cargo.toml
crates/tandem-tools/src/: approval_classifier.rs  builtin_tools.rs  lib.rs  repo_intelligence_tool_support.rs  repo_intelligence_tools.rs  repo_intelligence_tools_tests.rs  tool_dispatcher.rs  tool_metadata.rs
engine/: Cargo.toml  README.md
engine/resources/: default_knowledge_bundle.json  default_knowledge_manifest.json
engine/src/: default_knowledge_bundle.rs  main.rs  main_tests.rs  runtime_bootstrap.rs  storage_maintenance.rs
(+1784 files in other folders)
