[workspace]
members = [
    "apps/tandem-desktop/src-tauri",
    "engine",
    "crates/tandem-browser",
    "crates/tandem-types",
    "crates/tandem-wire",
    "crates/tandem-core",
    "crates/tandem-data-boundary",
    "crates/tandem-document",
    "crates/tandem-incident-monitor",
    "crates/tandem-eval",
    "crates/tandem-providers",
    "crates/tandem-tools",
    "crates/tandem-automation",
    "crates/tandem-server",
    "crates/tandem-runtime",
    "crates/tandem-tui",
    "crates/tandem-observability",
    "crates/tandem-meta-harness-eval",
    "crates/tandem-skills",
    "crates/tandem-memory",
    "crates/tandem-orchestrator",
    "crates/tandem-enterprise-contract",
    "crates/tandem-enterprise-server",
    "crates/tandem-channels",
    "crates/tandem-agent-teams",
    "crates/tandem-workflows",
    "crates/tandem-plan-compiler",
    "crates/tandem-governance-engine",
    "crates/tandem-graph-core",
    "crates/tandem-repo-intelligence",
]
resolver = "2"

[patch.crates-io]
esaxx-rs = { path = "third_party/esaxx-rs" }

[profile.fast-release]
inherits = "release"
incremental = true
codegen-units = 32
opt-level = 2
lto = "off"

# Windows/MSVC dev builds can produce very large debug artifacts. Keep workspace
# dev artifacts smaller so local Tauri builds do not exhaust small disks.
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0
