[package]
name = "tandem-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
glob = "0.3"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
tandem-types = { path = "../crates/tandem-types" }
tandem-wire = { path = "../crates/tandem-wire" }
tandem-runtime = { path = "../crates/tandem-runtime" }
tandem-core = { path = "../crates/tandem-core" }
tandem-tools = { path = "../crates/tandem-tools" }
tandem-providers = { path = "../crates/tandem-providers" }
tandem-server = { path = "../crates/tandem-server" }
