[package]
name = "tandem-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio-util = "0.7"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
tandem-types = { path = "../tandem-types" }
tandem-wire = { path = "../tandem-wire" }
tandem-tools = { path = "../tandem-tools" }
tandem-providers = { path = "../tandem-providers" }
