[package]
name = "tandem-data-boundary"
version = "0.6.7"
description = "Secure data boundary policy and evidence contract types for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
