[package]
name = "tandem-document"
version = "0.6.9"
description = "Document text extraction for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
pdf-extract = "0.12"
calamine = "0.36"
quick-xml = "0.41"
zip = "0.6"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
