[package]
name = "tandem-enterprise-server"
version = "0.5.13"
description = "Enterprise HTTP routes and connectors for Tandem server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[features]
default = []
google-drive = []
governance = ["tandem-server/premium-governance"]
local-embeddings = ["tandem-memory/local-embeddings"]
full = ["google-drive", "governance", "local-embeddings"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = "2"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

tandem-core = { path = "../tandem-core", version = "0.5.13" }
tandem-enterprise-contract = { path = "../tandem-enterprise-contract", version = "0.5.13" }
tandem-memory = { path = "../tandem-memory", version = "0.5.13" }
tandem-server = { path = "../tandem-server", version = "0.5.13", default-features = false }

[dev-dependencies]
serial_test = "3"
tower = "0.5"
