[package]
name = "tandem-meta-harness-eval"
version = "0.6.1"
edition = "2021"
description = "Durable trace and scored-version models for Tandem meta-harness evaluation"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
