[package]
name = "tandem-observability"
version = "0.7.1"
description = "Tracing and observability utilities for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
metrics = "0.24.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
sentry = { version = "0.48.2", optional = true, default-features = false, features = ["panic", "transport"] }

[features]
default = []
sentry = ["dep:sentry"]
