[package]
name = "tandem-providers"
version = "0.6.8"
description = "Provider integrations for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
dirs = "6"
futures = "0.3"
fs2 = "0.4"
keyring = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tandem-data-boundary = { path = "../tandem-data-boundary", version = "0.6.8" }
tandem-types = { path = "../tandem-types", version = "0.6.8" }

[dev-dependencies]
tempfile = "3"
