[package]
name = "tandem-repo-intelligence"
version = "0.5.13"
description = "Deterministic repository intelligence primitives for Tandem"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tandem-graph-core = { path = "../tandem-graph-core", version = "0.5.13" }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
