[package]
name = "tandem-server"
version = "0.6.8"
description = "HTTP server for Tandem engine APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[features]
default = ["storage-sqlite"]
enterprise = ["tandem-memory/postgres"]
browser = ["tandem-browser"]
local-embeddings = ["tandem-memory/local-embeddings"]
postgres = ["tandem-memory/postgres"]
# Stateful orchestration store backends (TAN-714/TAN-715). SQLite remains the
# default; PostgreSQL is opt-in and selected at runtime with
# TANDEM_STORAGE_BACKEND=postgres + TANDEM_STORAGE_POSTGRES_URL. The rusqlite
# dependency itself stays unconditional because the runtime event store and
# session repository are not yet behind the storage backend contract.
storage-sqlite = []
storage-postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres"]
premium-governance = ["dep:tandem-governance-engine"]
# Exposes the `test_support` module (test_state / next_event_of_type) so crates
# that mount routes onto the server (e.g. tandem-enterprise-server) can build a
# realistic AppState in their own HTTP integration tests. Test-only; not enabled
# by any production build.
test-support = []
# Reusable, deterministic ACME Slack production-path demo command support.
# Kept out of normal server builds and release artifacts.
acme-demo = ["premium-governance"]

[dependencies]
anyhow = "1"
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.12"
dirs = "6"
ed25519-dalek = "2"
flate2 = "1"
fs2 = "0.4"
hmac = "0.12"
futures = "0.3"
ignore = "0.4"
image = "0.25"
regex = "1"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
zip = "2.4.2"
tandem-core = { path = "../tandem-core", version = "0.6.8" }
tandem-data-boundary = { path = "../tandem-data-boundary", version = "0.6.8" }
tandem-providers = { path = "../tandem-providers", version = "0.6.8" }
tandem-runtime = { path = "../tandem-runtime", version = "0.6.8" }
tandem-tools = { path = "../tandem-tools", version = "0.6.8" }
tandem-automation = { path = "../tandem-automation", version = "0.6.8" }
tandem-incident-monitor = { path = "../tandem-incident-monitor", version = "0.6.8" }
tandem-skills = { path = "../tandem-skills", version = "0.6.8" }
tandem-memory = { path = "../tandem-memory", version = "0.6.8" }
tandem-orchestrator = { path = "../tandem-orchestrator", version = "0.6.8" }
tandem-enterprise-contract = { path = "../tandem-enterprise-contract", version = "0.6.8" }
tandem-governance-engine = { path = "../tandem-governance-engine", version = "0.6.8", optional = true }
tandem-types = { path = "../tandem-types", version = "0.6.8" }
tandem-workflows = { path = "../tandem-workflows", version = "0.6.8" }
tandem-wire = { path = "../tandem-wire", version = "0.6.8" }
tandem-channels = { path = "../tandem-channels", version = "0.6.8" }
tandem-browser = { path = "../tandem-browser", version = "0.6.8", optional = true }
tandem-observability = { path = "../tandem-observability", version = "0.6.8" }
tandem-plan-compiler = { path = "../tandem-plan-compiler", version = "0.6.8" }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
serial_test = "3"
