[package]
name = "tandem-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
glob = "0.3"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tandem-types = { path = "../tandem-types" }
